// SPDX-License-Identifier: Apache-2.0
// Copyright (c) 2020 Intel Corporation

syntax = "proto3";

option go_package="./readynotify";

service readyNotify {
	rpc Alert (Topic) returns (stream Notification){

	}

	rpc Unsubscribe (Topic) returns (UnsubscribeResponse){

	}
}

message Alert {
	string message = 1;
}

message Topic {
	string clientName = 1;
	string appContext = 2;
}

message Notification {
	string clientName = 1;
	string serverName = 2;
	string appContext = 3;
	string app = 4;
	string cluster = 5;
}

message UnsubscribeResponse {
}
